# kultur-app

./: .env.example  .gitignore  README.md  backend-dev.err  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  dev_server.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_order_board_fields.py  0003_accounting_links.py
backend/app/: __init__.py  main.py
backend/app/api/: accounting.py  audit.py  auth.py  cars.py  crm.py  orders.py  shipments.py  tasks.py  users.py  utils.py
backend/app/core/: bootstrap.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: accounting.py  car.py  order.py  task.py  user.py
backend/app/schemas/: __init__.py
backend/app/services/: importer.py  orders.py
backend/kultur_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_accounting_integrity.py  test_audit.py  test_auth.py  test_imports.py  test_orders.py
docs/: acceptance-checklist.md  backup-restore.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/fonts/: README.md
frontend/src/: App.tsx
frontend/src/lib/: api.ts  calc.test.ts  calc.ts
frontend/src/styles/: app.css
frontend/src/types/: api.ts
frontend/tests/: app.spec.ts
scripts/: backup.ps1  restore.ps1
